<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Drugstore_VNC</string>
    <string name="login">Login</string>
    <string name="_number_Phone">Number Phone</string>
    <string name="forgot_Password">Forgot Password</string>
    <string name="for_private_customers">For Private Customers</string>
    <string name="for_pharmacy_counters">For Pharmacy Counters</string>
    <string name="haven_account">Haven\'t account ? Signup</string>
    <string name="members_login">Members Login</string>
    <string name="_password">Password</string>
    <string name="terms_Of_Use">Terms of use</string>
    <string name="register_For_Member">Register for a member account you have agreed to</string>
    <string name="register_For_Pharmacy">Register for a Pharmacy account you have agreed to</string>
    <string name="business_License">Business License</string>
    <string name="address_Pharma">Address Pharma</string>
    <string name="_email">Email</string>
    <string name="rename">Rename</string>
    <string name="_name">Name</string>
    <string name="signup_Account">SignUp Account</string>
    <string name="oder_Number">OderNumber</string>
    <string name="oder_Date">OderDate</string>
    <string name="total_Price">TotalPrice</string>
    <string name="use_Coin">UseCoin</string>
    <string name="use_Vocher">UseVocher</string>
    <string name="total_End">TotalEnd</string>
    <string name="coin_Gift">coinGift</string>
    <string name="add_To_Cart">Add To Cart</string>
    <string name="sos">SOS</string>
    <string name="bonus">Bonus</string>
    <string name="choose_Among">Choose Among</string>
    <string name="amongmin">amongMin</string>
    <string name="sell_Price_Item_Product">sellPriceItemProduct</string>
    <string name="price_Item_Product">priceItemProduct</string>
    <string name="packing">Packing</string>
    <string name="bonus_Coins">bonusCoins</string>
    <string name="create_Order">Create Order</string>
    <string name="reduction_Rate">Reduction rate</string>
    <string name="pay_Online">Pay Online</string>
    <string name="icon_Change">Coin Change</string>
    <string name="success">Success Login</string>
    <string name="failAddImage">No photos added yet</string>
    <string name="addProduct">Success Add Product</string>
    <string name="numberFail">Account does not exist</string>
    <string name="icon_Title">Icon Title</string>
    <string name="addFail">Add Fail</string>
    <string name="addFailCheck">Please enter the correct value</string>
    <string name="minCheck">The value can only be at least </string>
    <string name="logoutFail">Logout Fail</string>
    <string name="note">Note</string>
    <string name="accountactive">Account Don\'t Active</string>
    <string name="active">Active</string>
    <string name="producer">Producer</string>
    <string name="drugGroup">Drug Group</string>
    <string name="apply">Apply</string>
    <string name="listvoucher">List Voucher</string>
    <string name="cancle">Cancle</string>
    <string name="ok">OK</string>
    <string name="maxnimum">Maxnimum value reached</string>
    <string name="minimum">Minimum value reached</string>
    <string name="coins">Coins</string>
    <string name="doyouwantcreatethisorder">Do you want create this order?</string>
    <string name="doyouwantdeletethisorder">Do you want to delete this product?</string>
    <string name="use1000">Use 1000 coins to get 1,000 VND off</string>
    <string name="odersReceive">Orders receive a total of</string>
    <string name="pleaseAddProduct">Please, Add Product</string>
    <string name="address">Address</string>
    <string name="tax_Code">Tax Code</string>
    <string name="full_Name">Full Name</string>
    <string name="delete">Delete</string>
    <string name="total_Among_Products">Total Among Products</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="contact">Contact</string>
    <string name="facebook">Facebook</string>
    <string name="zalo">Zalo</string>
    <string name="loaded">Have load</string>
    <string name="warningVoucher">It seems your discount code is invalid, please try another code</string>
    <string name="donePriceListCard">If you want to change the value in the input box.
Please press confirm after entering or the confirmation mark in the bottom right corner of the keyboard</string>
    <string name="total_Number_Of_Products">Total Number Of Products</string>
    <string name="total_Price_Of_All_Products">Total Price Of All Products</string>
    <string name="order_Details">Order Details</string>
    <string name="purchase_History">Purchase History</string>
    <string name="hello">Hello</string>
    <string name="access">Access</string>
    <string name="selling_Products">Selling Products</string>
    <string name="promotion">Promotion</string>
    <string name="new_Products">New Products</string>
    <string name="promotional_Products">Promotional Products</string>
    <string name="all_Products">All Products</string>
    <string name="member_Information">Member Information</string>
    <string name="rank">Rank</string>
    <string name="outStock">Out Of Stock</string>
    <string name="zero_coin">0 Coin</string>
    <string name="name_Pharma">Name Pharma</string>
    <string name="tax">Tax</string>
    <string name="avatar">Avatar</string>
    <string name="update">Update</string>
    <string name="item_Search">ItemSearch</string>
    <string name="total_Number_Of_Orders">Total number of orders</string>
    <string name="cart">Cart</string>
    <string name="continue_Pay">Continue</string>
    <string name="obligations">Obligations of the seller and customer in each transaction</string>
    <string name="inspection_Policy">Inspection Policy</string>
    <string name="marranty_Policy">Warranty Policy</string>
    <string name="return_Policy">Return Policy</string>
    <string name="delivery_Policy">Delivery Policy</string>
    <string name="payment_Policy">Payment Policy</string>
    <string name="selling">Selling</string>
    <string name="shopping_Guide">Shopping Guide</string>
    <string name="privacy_Policy">Privacy Policy</string>
    <string name="outterms_Of_Use">Outterms Of Use</string>
    <string name="introduce">Introduce</string>
    <string name="news">News</string>
    <string name="support">Support</string>
    <string name="manager_Shop">Manager Shop</string>
    <string name="my_Infor">My Infor</string>
    <string name="payment_Confirmation">Payment Confirmation</string>
    <string name="date">date</string>
    <string name="price">price</string>
    <string name="paid">Paid</string>
    <string name="waitPay">Wait for pay</string>
    <string name="sales_History">Sales History</string>
    <string name="hashtag">hashtag</string>
    <string name="history_Buy">History Buy</string>
    <string name="tittle">tittle</string>
    <string name="content">content</string>
    <string name="portfolio">Portfolio</string>
    <string name="doyouwantlogoutthisaccount">Do you want logout this account</string>
    <string name="minimumquantity">Minimum quantity</string>
    <string name="maximumquantity">Maximum quantity</string>
    <string name="amongmax">amongMax</string>
    <string name="km">KM</string>
    <string name="login_pharmacy">Login Pharmacy</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="manage">Manage</string>
    <string name="no_sales_history">No sales history</string>
    <string name="no_data">No data</string>
    <string name="updateInfor">Update Success</string>
    <string name="failPass">Wrong password</string>
    <string name="selectImg">Selection Image</string>
    <string name="capture">IMAGE CAPTURE</string>
    <string name="gallery">IMAGE GALLERY</string>
    <string name="phone10">Please,Enter all 10 phone numbers</string>
    <string name="pass8">Please,Password must be 8 characters long</string>
    <string name="please">Please,Input</string>
    <string name="pressBack">Press back again to exit</string>
    <string name="pleaseEmail">Please enter the correct email type</string>
    <string name="checkVoucher">It seems your discount code is invalid, please try another code</string>
    <string name="phamarcy">Phamarcy</string>
</resources>