<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:enabled="true"
        android:title="@string/home"
        />
    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:enabled="true"
        android:title="@string/category"/>
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/baseline_history_24"
        android:enabled="true"
        android:title="@string/history"/>
    <item
        android:id="@+id/manageFragment"
        android:icon="@drawable/baseline_store_24"
        android:enabled="true"
        android:title="@string/manage"/>
</menu>