<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraintLayoutPurchase"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/oderPurchaseHistory"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/_ten"
        android:layout_height="wrap_content"
        android:text="@string/purchase_History"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_marginStart="@dimen/_ten"
        android:layout_marginVertical="@dimen/_five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/oderPurchaseHistory"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/datePurchaseHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <TextView
            android:id="@+id/addressPurchaseHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address" />

        <TextView
            android:id="@+id/pricePurchaseHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="#FF0000"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/_five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/payPurchaseHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_five"
            android:gravity="center"
            android:text="@string/paid"

            android:textColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardImgPurchaseHistory"
            tools:ignore="TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImgPurchaseHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/fifty"
            android:backgroundTint="#FF9800"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imgPurchaseHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/three"
                android:padding="@dimen/three"
                android:src="@drawable/timeismoney"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>