<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">



    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/right_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/btnSwipeEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_five">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rename"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_bookmark_add_24"
                        android:tint="@color/white"
                        tools:ignore="ContentDescription,UseAppTint" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnSwipeDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/red"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_five">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_delete_forever_24"
                        android:tint="@color/white"
                        tools:ignore="ContentDescription,UseAppTint" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </com.daimajia.swipe.SwipeLayout>
</LinearLayout>